# cenum

./: .gitignore  Cargo.toml  README.md  cenum.example.yaml  selene.toml
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  model.rs  validate.rs
src/generate/: basic.rs  mod.rs  new_solver.rs  old_solver.rs  runtime.rs
