[package]
name = "cenum"
version = "0.1.0"
edition = "2021"
description = "A Rokit-friendly Luau custom enum compiler"
license = "MIT"

[[bin]]
name = "cenum"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.14"
